# librtlsdr-android-module

./: .gitignore  README.md  build.gradle
src/main/cpp/: CMakeLists.txt  libusbhelper.c  rtlsdr_jni.c  tuner_e4k.c
src/main/java/com/sdr/librtlsdr/: SdrDriver.kt
